--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutter_money_formatter
 description: FlutterMoneyFormatter is a Flutter extension to formatting various types of currencies according to the characteristics you like, without having to be tied to any localization.
 version: 0.8.3+1
+publish_to: none
 homepage: https://github.com/fadhly-permata/flutter_money_formatter
 
 environment:
